--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 bcrypt==4.0.1
 cffi==1.15.1
-cryptography==40.0.1
+cryptography==36.0.2
+dataclasses==0.8
 jasypt4py==0.0.3
-mysql-connector-python==8.0.32
+mysql-connector-python==8.0.29
 paramiko==3.1.0
-protobuf==3.20.3
+protobuf==3.19.6
 pycparser==2.21
 pycrypto==2.6.1
 pycryptodomex==3.17
-pydantic==1.10.7
+pydantic==1.9.2
 PyNaCl==1.5.0
 PyYAML==6.0
 scp==0.14.5
 sshtunnel==0.4.0
-typing_extensions==4.5.0
+typing_extensions==4.1.1
